media/css/firefox/developer/includes/intro.scss
@import '~@mozilla-protocol/core/protocol/css/includes/lib';

//*------------------------------------------------------------------*/
// Intro

.t-intro {
    text-align: center;
    margin-bottom: $layout-sm;

    .mzp-l-content {
        padding-top: $layout-lg;
    }
}

.intro-title {
    @include text-title-md;
    background-position: top center;
    background-repeat: no-repeat;
    margin: $layout-sm auto;
    max-width: $content-md;
}

.intro-tagline {
    @include text-body-lg;
    margin: 0 auto $layout-md;
    max-width: $content-sm;

    .t-home & {
        max-width: $content-md;
    }
}

.intro-feedback-note {
    @include text-body-xs;
    margin: $spacing-sm auto 0;
    max-width: $content-xs;
}

.intro-image {
    background-image: url('/media/img/firefox/developer/hero-background.svg');
    background-position: 80% 100%;
    background-repeat: no-repeat;
    background-size: auto 420px;
    height: 420px;
    position: relative;

    img {
        bottom: 0;
        height: 337px;
        max-width: none;
        position: absolute;
        right: 0;
    }
}

@media #{$mq-lg} {
    .intro-image {

        img {
            left: 50%;
            margin-left: -600px;
            right: auto;
        }
    }
}

